Amend background image in game.html to ensure covers all screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,7 +180,7 @@ p {
     background: url("/assets/images/meadow.jpg") no-repeat center center fixed; 
     height: 100vh;
     background-repeat: no-repeat;
-    background-size: auto 100%;
+    background-size: cover;
   }
 
 .image-div {
@@ -209,7 +209,7 @@ p {
 
 /* hide function for audion/ mute button */
 .hide-button {
-    display: none;
+    visibility: hidden;
 }
 
 @media only screen and (max-width: 968px) {
